--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.17",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
