--- a/package.json
+++ b/package.json
@@ -36,9 +36,15 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.17",
+    "@types/express-graphql": "^0.9.0",
+    "@types/graphql": "^14.5.0",
+    "@types/lodash": "^4.14.195",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
+    "lodash": "^4.17.21"
   }
 }
