--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "steambot",
+  "name": "pt",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,7 @@
     }
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "npx nodemon",
     "build": "rimraf ./build && npx tsc",
     "start": "npm run build && node build/index.js",
@@ -21,14 +21,19 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.13",
+    "@types/jest": "^29.5.3",
     "@types/node": "^20.3.2",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "eslint": "^8.43.0",
     "husky": "^8.0.3",
+    "jest": "^29.6.1",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.5"
   },
