--- a/package.json
+++ b/package.json
@@ -14,28 +14,32 @@
     "build": "rimraf ./build && npx tsc",
     "start": "npm run build && node build/index.js",
     "lint": "npx eslint ./src",
-    "format": "npx eslint ./src --fix"
+    "format": "npx eslint ./src --fix",
+    "wdio": "wdio run ./wdio.conf.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.13",
-    "@types/jest": "^29.5.3",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^20.3.2",
-    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "@wdio/cli": "^8.13.5",
+    "@wdio/local-runner": "^8.13.4",
+    "@wdio/mocha-framework": "^8.12.1",
+    "@wdio/spec-reporter": "^8.12.2",
+    "chromedriver": "^114.0.3",
     "eslint": "^8.43.0",
     "husky": "^8.0.3",
     "jest": "^29.6.1",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.5"
+    "typescript": "^5.1.6",
+    "wdio-chromedriver-service": "^8.1.1"
   },
   "type": "module",
   "dependencies": {
@@ -47,6 +51,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "expect": "^29.6.1",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
