--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "strict": true,
     "noImplicitAny": true,
     "skipLibCheck": true,
+    "types": ["node", "@wdio/globals/types", "@wdio/mocha-framework"],
     // "moduleResolution": "node"
     // "allowImportingTsExtensions": true,
     // "emitDeclarationOnly" :true,
